[package]
name = "rayso"
version = "0.1.1"
edition = "2021"
authors = [ "PwnWriter < hey@pwnwriter.xyz >" ]
description = "Upload code to ray.so from terminal"
readme = "README.md"
repository = "https://github.com/pwnwriter/rayso"
homepage = "https://github.com/pwnwriter/rayso.git"
license = "MIT"
keywords = ["screenshots", "code-beautify", "sippet"]
categories = ["accessibility", "web-programming", "command-line" ]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
open = "5.0.0"
rbase64 = "2.0.3"

[profile.dev]
opt-level = 0
debug = true
panic = "abort"

[profile.test]
opt-level = 0
debug = true

[profile.release]
opt-level = 3
debug = false
panic = "unwind"
lto = true
codegen-units = 1

[profile.bench]
opt-level = 3
debug = false
